--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,3 +5,5 @@ set(sources "")
 add_library(eda INTERFACE)
 add_library(topisani::eda ALIAS eda)
 target_include_directories(eda INTERFACE "${EDA_SOURCE_DIR}/include")
+
+target_link_libraries(eda INTERFACE mdspan)
